--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "firebase": "^9.23.0",
+    "firebaseui": "^6.0.2",
+    "notiflix": "^3.2.6"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
